# blitzkrieg

./: Cargo.toml  README.md
.github/workflows/: tests.yaml
examples/: file.rs  hello_world.rs  multi_part.rs
src/: http.rs  lib.rs  main.rs  server.rs  test.rs  threadpool.rs
src/http/: errors.rs  methods.rs  mod.rs  parser.rs
